<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attr="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llLib"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.astuetz.PagerSlidingTabStrip
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/background"
        android:elevation="10dp"
        android:textColor="@color/text"
        attr:pstsShouldExpand="true"
        attr:pstsTextAlpha="0.5"
        attr:pstsTextSelectedStyle="italic"
        attr:pstsTextStyle="italic" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_light"
        android:elevation="5dp">

        <RelativeLayout
            android:id="@+id/rlLibControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivLibArt"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/art"
                android:src="@drawable/art" />

            <TextView
                android:id="@+id/tvLibTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/ivLibArt"
                android:layout_toLeftOf="@+id/ibLibPlay"
                android:layout_toRightOf="@+id/ivLibArt"
                android:layout_toStartOf="@+id/ibLibPlay"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvLibArtist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLibTitle"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@+id/ivLibArt"
                android:layout_toLeftOf="@+id/ibLibPlay"
                android:layout_toRightOf="@+id/ivLibArt"
                android:layout_toStartOf="@+id/ibLibPlay"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/artist"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLibAlbum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLibArtist"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@+id/ivLibArt"
                android:layout_toLeftOf="@+id/ibLibPlay"
                android:layout_toRightOf="@+id/ivLibArt"
                android:layout_toStartOf="@+id/ibLibPlay"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/album"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/ibLibPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play"
                android:padding="10dp"
                android:src="@drawable/ic_av_play_arrow" />


        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>